calico-enterprise_versioned_docs/version-3.14/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/helm.mdx
---
title: Upgrade Calico to Calico Enterprise installed with Helm
description: Upgrade to Calico Enterprise from Calico installed with Helm.
---

import CodeBlock from '@theme/CodeBlock';

:::note

All upgrades in {{prodname}} are free with a valid license.

:::

## Upgrades paths

Upgrading to {{prodname}} v3.13 and above, from Calico 3.22 and below is currently unsupported.

## Upgrade from Calico to {{prodname}}

:::note

The following steps assume the Calico deployment is installed on `tigera-operator` namespace. Replace with valid namespace otherwise.

:::

1. Get the Helm chart

   <CodeBlock language='bash-plain-text'>
     {'{{version}}' === 'master'
       ? 'gsutil cp gs://tigera-helm-charts/tigera-operator-v0.0.tgz'
       : 'curl -O -L {{downloadsurl}}/ee/charts/tigera-operator-{{chart_version_name}}.tgz'}
   </CodeBlock>

1. Install the {{prodname}} custom resource definitions.

   ```bash-plain-text
   kubectl apply -f {{filesUrl}}/manifests/operator-crds.yaml
   kubectl apply -f {{filesUrl}}/manifests/prometheus-operator-crds.yaml
   kubectl apply -f {{filesUrl}}/manifests/eck-operator-crds.yaml
   ```

1. [Configure a storage class for {{prodname}}](../../../../operations/logstorage/create-storage.mdx)

1. Run the Helm upgrade command for `tigera-operator`

   <CodeBlock language='bash-plain-text'>
     {'{{version}}' === 'master'
       ? `helm upgrade calico-enterprise tigera-operator-v0.0.tgz \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--namespace tigera-operator`
       : `helm upgrade calico-enterprise tigera-operator-{{chart_version_name}}.tgz \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--namespace tigera-operator`}
   </CodeBlock>

1. Wait until the `apiserver` shows a status of `Available`, then proceed to the next section. You can monitor progress with the following command:

   ```bash-plain-text
   watch kubectl get tigerastatus/apiserver
   ```

1. Install your {{prodname}} license.

   ```bash-plain-text
   kubectl apply -f </path/to/license.yaml>
   ```

1. Monitor progress, wait until all components show a status of `Available`, then proceed to the next step.

   ```bash-plain-text
   watch kubectl get tigerastatus
   ```

   :::note

   If there are any problems you can use `kubectl get tigerastatus -o yaml` to get more details.

   :::

1. Apply the following manifest to secure {{prodname}} with network policy:

   ```bash-plain-text
   kubectl apply -f {{filesUrl}}/manifests/tigera-policies.yaml
   ```
