calico-enterprise_versioned_docs/version-3.15/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/helm.mdx
---
description: Upgrade to Calico Enterprise from Calico installed with Helm.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.15/variables';

# Upgrade Calico to Calico Enterprise installed with Helm

import CodeBlock from '@theme/CodeBlock';

:::note

All upgrades in {variables.prodname} are free with a valid license.

:::

## Upgrades paths

Upgrading to {variables.prodname} v3.13 and above, from Calico 3.22 and below is currently unsupported.

## Upgrade from Calico to {variables.prodname}

:::note

The following steps assume the Calico deployment is installed on `tigera-operator` namespace. Replace with valid namespace otherwise.

:::

1. Get the Helm chart

   <CodeBlock language='bash'>
     {'{variables.version}' === 'master'
       ? 'gsutil cp gs://tigera-helm-charts/tigera-operator-v0.0.tgz'
       : 'curl -O -L {variables.downloadsurl}/ee/charts/tigera-operator-{variables.chart_version_name}.tgz'}
   </CodeBlock>

1. Install the {variables.prodname} custom resource definitions.

   ```bash
   kubectl apply --server-side --force-conflicts -f {variables.filesUrl}/manifests/operator-crds.yaml
   kubectl create -f {variables.filesUrl}/manifests/prometheus-operator-crds.yaml
   kubectl create -f {variables.filesUrl}/manifests/eck-operator-crds.yaml
   ```

1. [Configure a storage class for {variables.prodname}](../../../../operations/logstorage/create-storage.mdx)

1. Run the Helm upgrade command for `tigera-operator`:

   <CodeBlock language='bash'>
     {'{variables.version}' === 'master'
       ? (
         `helm upgrade calico-enterprise tigera-operator-v0.0.tgz \\
   --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
   --namespace tigera-operator`
       )
       : (
         `helm upgrade calico-enterprise tigera-operator-{variables.chart_version_name}.tgz \\
   --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
   --namespace tigera-operator`
       )
     }
   </CodeBlock>

1. Wait until the `apiserver` shows a status of `Available`, then proceed to the next section. You can monitor progress with the following command:

   ```bash
   watch kubectl get tigerastatus/apiserver
   ```

1. Install your {variables.prodname} license.

   ```bash
   kubectl create -f </path/to/license.yaml>
   ```

1. Monitor progress, wait until all components show a status of `Available`, then proceed to the next step.

   ```bash
   watch kubectl get tigerastatus
   ```

   :::note

   If there are any problems you can use `kubectl get tigerastatus -o yaml` to get more details.

   :::

## Next steps

- [Configure access to {variables.prodname} Manager UI](../../../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../../../operations/cnx/authentication-quickstart.mdx)
